--- a/login.html
+++ b/login.html
@@ -4,12 +4,70 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CIU | Login</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom right, #ffffff, #e6f0ff);
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .login-box {
+      background-color: #ffffff;
+      padding: 40px 30px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+      width: 350px;
+      text-align: center;
+    }
+
+    .login-box img {
+      width: 80px;
+      margin-bottom: 15px;
+    }
+
+    .login-box h2 {
+      color: #003366;
+      margin-bottom: 25px;
+      font-size: 20px;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 14px;
+    }
+
+    button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      background-color: #004080;
+      color: white;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #003366;
+    }
+  </style>
 </head>
 <body>
-  <div class="login-container">
-    <img src="ciu-logo.png" alt="CIU Logo" class="logo" />
-    <h2>Login</h2>
+
+  <div class="login-box">
+    <img src="ciu-logo.png" alt="CIU Logo" />
+    <h2>University Login</h2>
+
     <input type="email" id="email" placeholder="Enter your university email" />
     <input type="password" id="password" placeholder="Enter your password" />
     <button onclick="login()">Login</button>
@@ -20,18 +78,17 @@
       const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value.trim();
 
-      // بيانات الدخول الصحيحة
-      const validEmail = "mohammad.youness@ciu.edu.ge";
-      const validPassword = "CIU.545978";
+      const correctEmail = "mohammad.youness@ciu.edu.ge";
+      const correctPassword = "CIU.545978";
 
-      if (email === validEmail && password === validPassword) {
-        localStorage.setItem("userLoggedIn", "true");
-        localStorage.setItem("userEmail", email);
+      if (email === correctEmail && password === correctPassword) {
+        localStorage.setItem("loggedInUser", email);
         window.location.href = "dashboard.html";
       } else {
         alert("Invalid email or password. Please try again.");
       }
     }
   </script>
+
 </body>
 </html>
