--- a/dashboard.html
+++ b/dashboard.html
@@ -2,24 +2,29 @@
 <html>
 <head>
   <title>Dashboard</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <script>
     const user = localStorage.getItem("authenticated");
     if (!user) window.location.href = "index.html";
+
     function logout() {
       localStorage.removeItem("authenticated");
+      localStorage.removeItem("userEmail");
       window.location.href = "index.html";
     }
   </script>
 </head>
 <body>
-  <h2>Welcome, Student</h2>
-  <ul>
-    <li><a href="profile.html">Student Profile</a></li>
-    <li><a href="grades.html">Grades</a></li>
-    <li><a href="transcript.html">Transcript</a></li>
-    <li><a href="schedule.html">Schedule</a></li>
-    <li><button onclick="logout()">Logout</button></li>
-  </ul>
+  <div class="dashboard-container">
+    <img src="ciu-logo.png" alt="CIU Logo" class="logo-small" />
+    <h2>Welcome, Student</h2>
+    <ul>
+      <li><a href="profile.html">Student Profile</a></li>
+      <li><a href="grades.html">Grades</a></li>
+      <li><a href="transcript.html">Transcript</a></li>
+      <li><a href="schedule.html">Schedule</a></li>
+      <li><button onclick="logout()">Logout</button></li>
+    </ul>
+  </div>
 </body>
 </html>
