--- a/grades.html
+++ b/grades.html
@@ -1,4 +1,4 @@
-Rabe33, [6/29/2025 6:45 AM]
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,53 +20,12 @@ Rabe33, [6/29/2025 6:45 AM]
                 </tr>
             </thead>
             <tbody>
-                <!-- Semester 1 -->
-                <tr><td>General histology, with cytology</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>Basic mandatory</td></tr>
-                <tr><td>Basics of philosophy</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>University optional</td></tr>
-                <tr><td>Foreign language - 1 (Georgian)</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>University mandatory</td></tr>
-                <tr><td>Human normal anatomy (locomotor and internal organs anatomy) for dentists</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>Basic mandatory</td></tr>
-                <tr><td>Introduction of biochemistry</td><td>4.0</td><td>2022-2023</td><td>Autumn</td><td>Basic mandatory</td></tr>
-                <tr><td>Medical biology</td><td>3.0</td><td>2022-2023</td><td>Autumn</td><td>Faculty mandatory</td></tr>
-                <tr><td>Biophysics</td><td>3.0</td><td>2022-2023</td><td>Autumn</td><td>Basic mandatory</td></tr>
-
-                <!-- Semester 2 -->
-                <tr><td>Emergency Medicine</td><td>3.0</td><td>2022-2023</td><td>Spring</td><td>Basic mandatory</td></tr>
-                <tr><td>Human normal Physiology (General) for dentists</td><td>5.0</td><td>2022-2023</td><td>Spring</td><td>Basic mandatory</td></tr>
-                <tr><td>Human normal anatomy (cardiovascular system and neuroanatomy) for dentists</td><td>4.0</td><td>2022-2023</td><td>Spring</td><td>Basic mandatory</td></tr>
-                <tr><td>General biochemistry for dentists</td><td>4.0</td><td>2022-2023</td><td>Spring</td><td>Basic mandatory</td></tr>
-                <tr><td>Foreign language - 2 (Georgian)</td><td>5.0</td><td>2022-2023</td><td>Spring</td><td>University mandatory</td></tr>
-                <tr><td>Special (organs Systems) histology</td><td>4.0</td><td>2022-2023</td><td>Spring</td><td>Basic mandatory</td></tr>
-                <tr><td>Basics of psychology</td><td>5.0</td><td>2022-2023</td><td>Spring</td><td>University optional</td></tr>
-
-                <!-- Semester 3 -->
-                <tr><td>Special biochemistry</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td></tr>
-                <tr><td>Prevention of dental diseases</td><td>3.0</td><td>2023-2024</td><td>Autumn</td><td>Clinical and Profile Mandatory</td></tr>
-                <tr><td>Introduction of Therapeutic Dentistry</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Clinical and Profile Mandatory</td></tr>
-                <tr><td>Topographic anatomy and operational surgery of the head and neck</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td></tr>
-                <tr><td>Human normal Physiology (organs systems) for dentists</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td></tr>
-                <tr><td>Basic Clinical Skills</td><td>3.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td></tr>
-                <tr><td>Pathology (General Pathology...)</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td></tr>
-                <tr><td>General microbiology for dentists</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td></tr>
-
-                <!-- Semester 4 -->
-                <tr><td>General Surgery for dentists</td><td>4.0</td><td>2023-2024</td><td>Spring</td><td>Clinical and Profile Mandatory</td></tr>
-                <tr><td>Immunology for dentists</td><td>3.0</td><td>2023-2024</td><td>Spring</td><td>Basic mandatory</td></tr>
-
-Rabe33, [6/29/2025 6:45 AM]
-<tr><td>Laboratory medicine</td><td>0.0</td><td>2023-2024</td><td>Spring</td><td>Faculty mandatory</td></tr>
-                <tr><td>Sociology</td><td>3.0</td><td>2023-2024</td><td>Spring</td><td>Faculty optional</td></tr>
-                <tr><td>Introduction of prosthodontic dentistry</td><td>5.0</td><td>2023-2024</td><td>Spring</td><td>Clinical and Profile Mandatory</td></tr>
-                <tr><td>Phantom Operative Odontology</td><td>4.0</td><td>2023-2024</td><td>Spring</td><td>Clinical and Profile Mandatory</td></tr>
-                <tr><td>Special microbiology</td><td>4.0</td><td>2023-2024</td><td>Spring</td><td>Basic mandatory</td></tr>
-                <tr><td>General Pharmacology for dentists</td><td>4.0</td><td>2023-2024</td><td>Spring</td><td>Basic mandatory</td></tr>
-                <tr><td>Pathology (Tumor growth...)</td><td>4.0</td><td>2023-2024</td><td>Spring</td><td>Basic mandatory</td></tr>
+              
             </tbody>
         </table>
     </div>
 </body>
 </html>
-
-Rabe33, [6/29/2025 7:05 AM]
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -97,8 +56,35 @@ Rabe33, [6/29/2025 7:05 AM]
       background-color: #eaeaea;
     }
   </style>
+  .subject {
+    color: darkred;
+    font-weight: bold;
+  }
+</style>
 </head>
-<body>
+<<h2>Semester Grades</h2>
+<table>
+  <tr>
+    <th>Subject</th>
+    <th>Credits</th>
+    <th>Grade</th>
+  </tr>
+  <tr>
+    <td class="subject">Human Anatomy</td>
+    <td>4.0</td>
+    <td>78</td>
+  </tr>
+  <tr>
+    <td class="subject">Biochemistry</td>
+    <td>3.0</td>
+    <td>85</td>
+  </tr>
+  <tr>
+    <td class="subject">Physiology</td>
+    <td>5.0</td>
+    <td>74</td>
+  </tr>
+</table>>
 
 <h2>Semester 1</h2>
 <table>
